noinst_LIBRARIES = liblogcachestreams.a
liblogcachestreams_a_SOURCES = \
	BinaryInStream.cpp\
	BinaryOutStream.cpp\
	BLOBInStream.cpp\
	BLOBOutStream.cpp\
	BufferedOutFile.cpp\
	CacheFileInBuffer.cpp\
	CacheFileOutBuffer.cpp\
	CompositeInStream.cpp\
	CompositeOutStream.cpp\
	DiffIntegerInStream.cpp\
	DiffIntegerOutStream.cpp\
	HierachicalInStreamBase.cpp\
	HierachicalOutStreamBase.cpp\
	HuffmanBase.cpp\
	HuffmanDecoder.cpp\
	HuffmanEncoder.cpp\
	MappedInFile.cpp\
	PackedDWORDInStream.cpp\
	PackedDWORDOutStream.cpp\
	PackedIntegerInStream.cpp\
	PackedIntegerOutStream.cpp\
	PackedTime64InStream.cpp\
	PackedTime64OutStream.cpp\
	RootInStream.cpp\
	RootOutStream.cpp\
	StreamException.cpp

AM_CPPFLAGS = -I$(srcdir)/../../UtilsProject -I$(srcdir)/../../CompatibilityHeaders

# set the include path found by configure
INCLUDES= $(all_includes)
